--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -110,9 +110,26 @@ Diese Probleme zu lösen ist das Ziel des Forschungsprojekts VizBoard. Es setzt 
 
 % problem liegt im letzten teil
 
-Im letzten Schritt 
+% welche probleme? Visualisierungen auseinanderhalten und einordnen können (intro), visualisierungen bedienen können (bedienung), fragen über daten stellen können (kommentare), konzept der zusammenarbeit von komponenten verstehen (kommunikation), fehler melden können (reporting), unbekannte konzepte beschrieben bekommen (verlinkung)
 
+Am Ende des VizBoard Workflows angekommen, wird dem Benutzer ein Mashup aus verschiedenen Informationsvisualisierungskomponenten präsentiert, welche miteinander kommunizieren können und so zusammenarbeiten. Beispielsweise aktualisiert sich das Balkendiagramm dem aktuellen Ausschnitt der Karte entsprechend.
 
+Einen unerfahrenen Nutzer, der den Inhalt der Daten verstehen will, stellt diese Situation vor einige Probleme. Zunächst wird er von mehreren verschiedenen Fenstern \enquote{überrumpelt}, die er alle nach der Reihe inspizieren muss. Er muss herausfinden, was sie darstellen und wie sie interpretiert werden sollen. Außerdem werden keine Angaben über die Bedienung gemacht: Welche Elemente lösen Aktionen aus und welche? Wie werden sie aktiviert? Gibt es Alternativen? Während er herumprobiert, um das alles herauszufinden, ändert sich die UI in anderen Komponenten -- ohne dass explizit mit ihnen interagiert wurde. Wann und nach welchen Regeln passiert das? Wenn der Benutzer die Daten inspiziert, werden einige Fragen auftauchen. Was bedeutet ein bestimmter Begriff? Wie ist diese Metrik definiert? Warum fällt sie in diesem einen Jahr so deutlich ab? 
+
+% ziel der arbeit: hilfesystem konzept, prototypisch umsetzen, aber quasi "real-world" prototyp. kein paper mockup.
+
+Ziel dieser Arbeit ist die Entwicklung eines Konzepts für ein semantik-gestütztes Hilfesystem für VizBoard, welches unerfahrenen Nutzer den Umgang mit dem Visualisierungs-Mashup erleichtert. Dadurch soll deren Verständnisprozess möglichst nicht unterbrochen werden, sodass sie möglichst schnell die Erkenntnisse finden, die sie gesucht haben. Das erarbeitete Konzept soll prototypisch umgesetzt und in CRUISe, welches die Basis für VizBoard ist, integriert werden.
+
+% teilziele der arbeit
+% szenario
+% anforderungsanalyse
+% grundlagen zu den betroffenen themen, also infovis, semantische daten, user assistance
+% schauen was andere so gemacht haben und wie es genutzt werden kann
+% konzept erstellen
+% prototypen implementieren
+% evaluation mit nutzerstudie
+
+Daraus leiten sich die folgenden Teilziele der Arbeit ab: Jop. Genau.
 
 % ###################################################
 \section{Aufbau der Arbeit}
